[tool.poetry]
name = "gpt-repo-profiler"
version = "0.1.0"
description = "A semi-automated codebase inspector to output a formatted context profile for ChatGPT, etc."
authors = ["Erik Nomitch <enomitch@gmail.com>"]
readme = "README.md"
packages = [{include = "gpt_repo_profiler"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
